--- a/cb_start_project/package.json
+++ b/cb_start_project/package.json
@@ -17,12 +17,13 @@
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.5.0",
     "expo": "~49.0.8",
+    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
-    "react": "18.2.0",
+    "react": "^18.2.0",
+    "react-intl": "^6.4.4",
     "react-native": "0.72.4",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "expo-splash-screen": "~0.20.5",
     "react-redux": "^8.1.2"
   },
   "devDependencies": {
