--- a/cb_start_project/package.json
+++ b/cb_start_project/package.json
@@ -19,11 +19,16 @@
     "expo": "~49.0.8",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
+    "install": "^0.13.0",
+    "npm": "^10.0.0",
     "react": "^18.2.0",
     "react-intl": "^6.4.4",
     "react-native": "0.72.4",
+    "react-native-gifted-charts": "^1.3.5",
+    "react-native-linear-gradient": "^2.8.2",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-svg": "^13.13.0",
     "react-redux": "^8.1.2"
   },
   "devDependencies": {
