--- a/cb_start_project/package.json
+++ b/cb_start_project/package.json
@@ -24,6 +24,7 @@
     "react": "^18.2.0",
     "react-intl": "^6.4.4",
     "react-native": "0.72.4",
+    "react-native-calendars": "^1.1301.0",
     "react-native-gifted-charts": "^1.3.5",
     "react-native-linear-gradient": "^2.8.2",
     "react-native-safe-area-context": "4.6.3",
