--- a/cb_start_project/package.json
+++ b/cb_start_project/package.json
@@ -12,7 +12,7 @@
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
-    "@react-navigation/native-stack": "^6.9.13",
+    "@react-navigation/stack": "^6.3.17",
     "@redux-devtools/extension": "^3.2.5",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.5.0",
@@ -27,6 +27,7 @@
     "react-native-calendars": "^1.1301.0",
     "react-native-gifted-charts": "^1.3.5",
     "react-native-linear-gradient": "^2.8.2",
+    "react-native-modal-dropdown": "^1.0.2",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "^13.13.0",
