--- a/cb_start_project/package.json
+++ b/cb_start_project/package.json
@@ -33,7 +33,8 @@
     "react-native-screens": "~3.22.0",
     "react-native-svg": "^13.13.0",
     "react-redux": "^8.1.2",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "expo-font": "~11.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
