--- a/cb_start_project/package.json
+++ b/cb_start_project/package.json
@@ -17,9 +17,11 @@
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.5.0",
     "expo": "~49.0.8",
+    "expo-font": "~11.4.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "install": "^0.13.0",
+    "moment": "^2.29.4",
     "npm": "^10.0.0",
     "react": "^18.2.0",
     "react-intl": "^6.4.4",
@@ -27,14 +29,14 @@
     "react-native-calendars": "^1.1301.0",
     "react-native-gifted-charts": "^1.3.5",
     "react-native-linear-gradient": "^2.8.2",
+    "react-native-mask-text": "^0.14.2",
     "react-native-modal": "^13.0.1",
     "react-native-modal-dropdown": "^1.0.2",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "^13.13.0",
     "react-redux": "^8.1.2",
-    "redux-persist": "^6.0.0",
-    "expo-font": "~11.4.0"
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
