--- a/cb_start_project/package.json
+++ b/cb_start_project/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@cherry-soft/react-native-basic-pagination": "^1.0.2",
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
@@ -20,9 +21,10 @@
     "expo-font": "~11.4.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
+    "i": "^0.3.7",
     "install": "^0.13.0",
     "moment": "^2.29.4",
-    "npm": "^10.0.0",
+    "npm": "^10.1.0",
     "react": "^18.2.0",
     "react-intl": "^6.4.4",
     "react-native": "0.72.4",
