--- a/cb_start_project/package.json
+++ b/cb_start_project/package.json
@@ -18,6 +18,7 @@
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.5.0",
     "expo": "~49.0.8",
+    "expo-file-system": "~15.4.4",
     "expo-font": "~11.4.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
@@ -38,7 +39,10 @@
     "react-native-screens": "~3.22.0",
     "react-native-svg": "^13.13.0",
     "react-redux": "^8.1.2",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "xlsx": "^0.18.5",
+    "expo-media-library": "~15.4.1",
+    "expo-sharing": "~11.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
