--- a/cb_start_project/package.json
+++ b/cb_start_project/package.json
@@ -32,9 +32,11 @@
     "react": "^18.2.0",
     "react-intl": "^6.4.4",
     "react-native": "0.72.4",
+    "react-native-animated-loader": "^1.0.0",
     "react-native-calendars": "^1.1301.0",
     "react-native-gifted-charts": "^1.3.5",
     "react-native-linear-gradient": "^2.8.2",
+    "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-mask-text": "^0.14.2",
     "react-native-modal": "^13.0.1",
     "react-native-modal-dropdown": "^1.0.2",
