--- a/cb_start_project/package.json
+++ b/cb_start_project/package.json
@@ -34,6 +34,7 @@
     "react-native": "0.72.4",
     "react-native-animated-loader": "^1.0.0",
     "react-native-calendars": "^1.1301.0",
+    "react-native-flash-message": "^0.4.2",
     "react-native-gifted-charts": "^1.3.5",
     "react-native-linear-gradient": "^2.8.2",
     "react-native-loading-spinner-overlay": "^3.0.1",
