--- a/cb_start_project/package.json
+++ b/cb_start_project/package.json
@@ -27,6 +27,7 @@
     "expo-status-bar": "~1.6.0",
     "i": "^0.3.7",
     "install": "^0.13.0",
+    "lodash.debounce": "^4.0.8",
     "moment": "^2.29.4",
     "npm": "^10.1.0",
     "react": "^18.2.0",
