--- a/cb_start_project/package.json
+++ b/cb_start_project/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/stack": "^6.3.17",
     "@redux-devtools/extension": "^3.2.5",
     "@reduxjs/toolkit": "^1.9.5",
+    "@rneui/themed": "^4.0.0-rc.8",
     "axios": "^1.5.0",
     "base-64": "^1.0.0",
     "expo": "~49.0.8",
