--- a/cb_start_project/package.json
+++ b/cb_start_project/package.json
@@ -29,6 +29,7 @@
     "i": "^0.3.7",
     "install": "^0.13.0",
     "lodash.debounce": "^4.0.8",
+    "lodash.isequal": "^4.5.0",
     "moment": "^2.29.4",
     "npm": "^10.1.0",
     "react": "^18.2.0",
