--- a/cb_start_project/package.json
+++ b/cb_start_project/package.json
@@ -26,6 +26,7 @@
     "expo-sharing": "~11.5.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
+    "expo-updates": "~0.18.16",
     "i": "^0.3.7",
     "install": "^0.13.0",
     "lodash.debounce": "^4.0.8",
@@ -38,7 +39,7 @@
     "react-native-animated-loader": "^1.0.0",
     "react-native-calendars": "^1.1301.0",
     "react-native-flash-message": "^0.4.2",
-    "react-native-gifted-charts": "^1.3.5",
+    "react-native-gifted-charts": "^1.3.12",
     "react-native-linear-gradient": "^2.8.2",
     "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-mask-text": "^0.14.2",
@@ -49,8 +50,7 @@
     "react-native-svg": "^13.13.0",
     "react-redux": "^8.1.2",
     "redux-persist": "^6.0.0",
-    "xlsx": "^0.18.5",
-    "expo-updates": "~0.18.16"
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
