--- a/cb_start_project/package.json
+++ b/cb_start_project/package.json
@@ -50,7 +50,10 @@
     "react-native-svg": "^13.13.0",
     "react-redux": "^8.1.2",
     "redux-persist": "^6.0.0",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "react-native-gesture-handler": "~2.12.0",
+    "@react-native-masked-view/masked-view": "0.2.9",
+    "expo-dev-client": "~2.4.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
