--- a/cb_start_project/package.json
+++ b/cb_start_project/package.json
@@ -26,6 +26,7 @@
     "expo-sharing": "~11.5.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
+    "expo-updates": "~0.18.17",
     "i": "^0.3.7",
     "install": "^0.13.0",
     "lodash.debounce": "^4.0.8",
@@ -34,11 +35,11 @@
     "npm": "^10.1.0",
     "react": "^18.2.0",
     "react-intl": "^6.4.4",
-    "react-native": "0.72.4",
+    "react-native": "0.72.6",
     "react-native-animated-loader": "^1.0.0",
     "react-native-calendars": "^1.1301.0",
     "react-native-flash-message": "^0.4.2",
-    "react-native-gifted-charts": "^1.3.5",
+    "react-native-gifted-charts": "^1.3.12",
     "react-native-linear-gradient": "^2.8.2",
     "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-mask-text": "^0.14.2",
@@ -46,11 +47,12 @@
     "react-native-modal-dropdown": "^1.0.2",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-svg": "^13.13.0",
+    "react-native-svg": "13.9.0",
     "react-redux": "^8.1.2",
     "redux-persist": "^6.0.0",
     "xlsx": "^0.18.5",
-    "expo-updates": "~0.18.16"
+    "react-native-gesture-handler": "~2.12.0",
+    "@react-native-masked-view/masked-view": "0.2.9"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
