--- a/cb_start_project/app.json
+++ b/cb_start_project/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "cb_start_project",
+    "name": "Cash Bulls",
     "slug": "cb_start_project",
     "version": "1.0.0",
     "orientation": "portrait",
