--- a/cb_start_project/eas.json
+++ b/cb_start_project/eas.json
@@ -3,7 +3,14 @@
     "version": ">= 5.5.0"
   },
   "build": {
+    "development": {
+      "developmentClient": true,
+      "distribution": "internal",
+      "channel": "development"
+    },
     "preview": {
+      "distribution": "internal",
+      "channel": "preview",
       "android": {
         "buildType": "apk"
       },
@@ -11,15 +18,9 @@
         "EXPO_PUBLIC_API_URL": "https://dev.cashbulls.io"
       }
     },
-    "preview2": {
-      "android": {
-        "gradleCommand": ":app:assembleRelease"
-      }
-    },
-    "preview3": {
-      "developmentClient": true
-    },
-    "production": {}
+    "production": {
+      "channel": "production"
+    }
   },
   "submit": {
     "production": {}
